# xshop-web

./: .env.example  .env_example  .flake8  .gitignore  README.md  api.http  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: Xshop-web-CI.yml  ci.yml  xshop-web-ci-workflow.yml
project/: asgi.py  settings.py  urls.py
static/about_static/: footer.css
static/cart_assets/css/: styles.css
static/css/: Header-Blue.css  base.css  home.css  home1.css  product_details.css
static/css/register/: Footer-Basic.css  Header-Blue.css
static/payments_statics/: Thank.css
static/product_assets/css/: Header-Blue.css  Header-Dark.css
templates/: base.html
templates/admin/: product_change_list.html
templates/dashboard/: cashier.html  data_entry.html  general_manager.html  manager.html
templates/footer_pages/: about.html  privacy_policy.html  services.html  terms.html
templates/invoices/invoice/: pdf.css
templates/pages/: cart.html  checkout.html  home.html  home0.html  index.html  landingpage.html  product_detail.html  products_search_results.html  search_results.html  shop_detail.html  shop_details.html  shop_details0.html  shops_search_results.html  swagger_ui.html  thankyou.html
templates/registration/: login.html  signup.html
xshop/cart/: apps.py  cart.py  forms.py  urls.py  views.py
xshop/cart/api/: serializers.py  urls.py  views.py
xshop/cart/tests/: test_cart.py  test_views.py
xshop/core/: admin.py  apps.py  models.py  utils.py
xshop/core/api/: serializers.py  urls.py  views.py
xshop/core/migrations/: 0001_initial.py  0002_pricingplan.py  0003_product.py  0004_auto_20201005_1509.py  0005_product_shop.py  0006_order_orderitem.py  0007_invoice.py  0008_order_paid.py  0009_auto_20201020_1939.py
xshop/core/tests/: test_api.py  test_commands.py  test_views.py
xshop/core/utils/: user_roles.py
xshop/dashboard/: apps.py  decorators.py  urls.py  views.py
xshop/dashboard/tests/: test_views.py
xshop/invoices/: admin.py  apps.py  models.py  urls.py  views.py
xshop/invoices/api/: serializers.py  urls.py  views.py
xshop/invoices/migrations/: 0001_initial.py
xshop/invoices/tests/: test_admin.py
xshop/orders/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
xshop/orders/api/: serializers.py  urls.py  views.py
xshop/orders/migrations/: 0001_initial.py  0002_auto_20210708_1454.py
xshop/orders/tests/: test_admin.py
xshop/pages/: apps.py  urls.py  views.py
xshop/pages/api/: urls.py  views.py
xshop/pages/tests/: test_api.py  test_views.py
xshop/payments/: apps.py  models.py  paymob.py  urls.py  views.py
xshop/payments/migrations/: 0001_initial.py
xshop/products/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
xshop/products/api/: serializers.py  urls.py  views.py
xshop/products/migrations/: 0001_initial.py  0002_product_barcode.py  0003_auto_20201115_1511.py  0004_auto_20201115_1520.py  0005_auto_20210328_2014.py  0005_auto_20210330_1112.py  0006_auto_20210329_0823.py  0006_auto_20210703_1557.py  0007_rating.py  0008_alter_rating_rating.py  0009_alter_rating_rating.py
xshop/products/tests/: test_admin.py  test_models.py  test_views.py
xshop/shops/: admin.py  apps.py  models.py  urls.py  views.py
xshop/shops/api/: serializers.py  urls.py  views.py
xshop/shops/migrations/: 0001_initial.py  0002_auto_20210703_1557.py  0003_shop_subdomain.py  0004_auto_20210708_1248.py  0005_alter_shop_subdomain.py  0006_alter_shop_subdomain.py
xshop/shops/tests/: test_admin.py  test_views.py
xshop/users/: admin.py  apps.py  forms.py  managers.py  mixins.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
xshop/users/api/: serializers.py  urls.py  views.py
xshop/users/migrations/: 0001_initial.py  0002_user_type.py  0003_auto_20201003_0833.py  0004_user_shop.py  0005_remove_user_type.py  0006_auto_20201130_0902.py
xshop/users/tests/: test_admin.py  (+6 more)
xshop/utils/: __init__.py
(+23 files in other folders)
