[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | manage.py,
    | venv,
    | \.venv,
    | \.env,
    | env,
    | downloads
    | static
    | templates
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "xshop-core"
version = "0.1.0"
description = "XShop's back end, dashboard, inventory, API and core business logic"
authors = ["Ahmed Shahwan <ahmed@shahwan.me>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1rc1"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.0"
flake8 = "^3.8.3"
black = "^19.10b0"
ipdb = "^0.13.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

